syntax = "proto3";

package price.v1;

option go_package = "github.com/NightRunner/CryptoTax-Go/services/price-svc/internal/gen/price/v1;pricev1";

import "google/protobuf/timestamp.proto";

service PriceService {
  rpc ValuateTransactionsBatch(ValuateTransactionsRequest)
      returns (ValuateTransactionsResponse);

  rpc UpsertTenantSymbol(UpsertTenantSymbolRequest)
      returns (UpsertTenantSymbolResponse);
}

message MoneyLeg {
  string symbol = 1;
  string amount = 2; // decimal as string
}

message FiatLeg {
  string symbol = 1;
  string fiat = 2; // decimal as string
}

message TxToValuate {
  string tx_id = 1;
  google.protobuf.Timestamp time_utc = 2;
  optional MoneyLeg in_money = 3;
  optional MoneyLeg out_money = 4;
  optional MoneyLeg fee_money = 5;
}

enum AssetErrorCode {
  ASSET_ERROR_CODE_UNSPECIFIED = 0;
  ASSET_UNKNOWN = 1;
  ASSET_AMBIGUOUS = 2;
  RATE_NOT_FOUND = 3;
  PROVIDER_ERROR = 4;
}

message CoinCandidate {
  string coin_id = 1;
  string name = 2;
}

message AssetError {
  string symbol = 1;
  AssetErrorCode code = 2;
  string message = 3;
  repeated CoinCandidate candidates = 4;
}

message ValuatedTx {
  string tx_id = 1;
  optional FiatLeg in_fiat = 2;
  optional FiatLeg out_fiat = 3;
  optional FiatLeg fee_fiat = 4;
  repeated AssetError errors = 5;
}

message ValuateTransactionsRequest {
  string tenant_id = 1;
  string source = 2;
  string fiat_currency = 3;
  repeated TxToValuate transactions = 4;
}

message ValuateTransactionsResponse {
  repeated ValuatedTx transactions = 1;
}

message UpsertTenantSymbolRequest {
  string tenant_id = 1;
  string source = 2;
  string symbol = 3;
  string coin_id = 4;
}

message UpsertTenantSymbolResponse {}
